--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ python-multipart==0.0.6
 starlette==0.27.0
 mysql-connector-python==8.1.0
 PyMySQL==1.1.0
+itsdangerous==2.1.2
+tabulate==0.9.0
+pandas==2.1.1
+tzdata==2023.3
