--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,9 @@ jobs:
 
     - name: show path
       run: pwd
+
+    - name: show files
+      run: ls -l
       
     - uses: actions/checkout@v3
     - name: Build the Docker image
