--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,11 @@ jobs:
       run: pwd
 
     - name: show files
-      run: ls -l
+      run: ls
+      
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build -t grandet_server .
       
     - uses: actions/checkout@v3
     - name: Build the Docker image
